fix(tables): improve alignment and button display

--- a/styles/components/tables.css
+++ b/styles/components/tables.css
@@ -24,8 +24,7 @@
 }
 
 .table-condensed thead tr > th, .table-condensed thead tr > td {
-  padding-top: .5em !important;
-  padding-bottom: .5em !important;
+  padding: .5em !important;
 }
 
 /* Datatables */
@@ -41,6 +40,14 @@ table.dataTable .prevent-sorting:after {
 }
 table.dataTable td>select {
   width: 200px !important;
+}
+.table-responsive {
+  margin-left: -15px;
+  margin-right: -15px;
+  width: calc(100% + 30px);
+}
+.table-responsive .row {
+  margin: 0;
 }
 
 /* Header */
