--- a/styles/partials/admin.css
+++ b/styles/partials/admin.css
@@ -13,12 +13,15 @@
   margin-bottom: .5rem ;
 }
 
-td > label {
+td > label, th > label {
   line-height: 0;
   vertical-align: middle;
   padding-left: .5rem;
   margin: 0;
   width: 1.2rem;
+}
+@media (max-width: 1200px) {
+  td > label, th > label { padding-left: .2rem; }
 }
 
 input[name=theme_modifier], input[name=geredroits_modifier] {
@@ -43,10 +46,6 @@ label.edit-group strong {
   text-align: center;
 }
 
-@media (max-width: 1200px) {
-  td > label { padding-left: .2rem; }
-}
-
 #accordion_update .panel {
   margin-bottom: 1rem;
 }
@@ -56,10 +55,4 @@ label.edit-group strong {
 }
 #accordion_update .dataTables_footer {
   margin: 0 0 .5rem 0;
-}
-
-table .check-all-container {
-  position: absolute;
-  top: 8px;
-  left: 15px;
 }
